.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_AccountGroup__c.object
<CustomObject>
    <description>This object is used to group multiple accounts together to provide pricing and/or entitlements.  An account group can have 1 or more accounts associated with it.  It also can have 1 or more pricelists (used for pricing and entitlements) associated.  This object then ties the accounts and entitlements/pricing together, ultimately controlling the product list and pricing that a given account can see within B2B Commerce.</description>
    <fields>
        <fullName>ccrz__AccountGroupID__c</fullName>
        <description>External ID used for mapping the account group to an externally defined entity.</description>
        <externalId>true</externalId>
        <label>Account Group ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Desc__c</fullName>
        <description>Short description of the account group - internal only.</description>
        <label>Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceListSelectionMethod__c</fullName>
        <description>When the Account Group is associated with multiple price lists that contain a price for the same item this is used to determine which price should be selected.  Sequence order refers to the sequence field on the Account Group-Price List junction object.</description>
        <label>PriceList Selection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best Price</fullName>
                    <default>true</default>
                    <label>Best Price</label>
                </value>
                <value>
                    <fullName>Sequence Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ThemeName__c</fullName>
        <description>When the OOTB cc_hk_DynamicTheme hook is used this is the name of the theme to use for users associated with this Account Group.</description>
        <label>Theme Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Account Group</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__AccountGroupID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Account Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>